# atlantis-open-weather-mcp

./: .gitignore  .windsurfrules  CLAUDE.md  README.md  mcp_client_config.json  package.json  pyproject.toml  requirements.txt  runServer  runUV
src/atlantis_open_weather_mcp/: weather_mcp_server.py
