[build-system]
requires = ["uv_build >= 0.1.0"]
build-backend = "uv_build"

[project]
name = "atlantis-open-weather-mcp"
version = "0.1.0"
description = "An MCP server for OpenWeather data using uvx."
requires-python = ">=3.8"
dependencies = [
    "modelcontextprotocol",
    # Add other dependencies like fastapi, requests, etc. here
]

[project.scripts]
start-weather-server = "atlantis_open_weather_mcp.weather_mcp_server:main" # Or adjust if your entry point is different

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv]
# uv specific configurations can go here
